OAuth Adjustments
